Improve support for C-style comments.

--- a/programs/test.tt
+++ b/programs/test.tt
@@ -16,7 +16,8 @@ struct struc {
 
 struct exten( struc ) {
 	f,g;
-	rem {}
+	rem {/*
+		*/}
 	function getg( ( exten ) this ) {
 		return this.g;
 	}
