--- a/programs/wavegen.tt
+++ b/programs/wavegen.tt
@@ -4,15 +4,15 @@ import audiodata from "audiodata.tt";
 /*
 	Simple looped-waveform generator. Example patches:
 
-	var str1 = "Waveform Sawtooth Octave -2 Chorus 1024";
-	var str2 = "Waveform Sawtooth Octave -2 Chorus 511 Point 0,-127 Point 256,127 Point 511,-127";
-	var str3 = "Waveform Sine Octave -2 Chorus 1023,1,0,96,128 Point 0,0 Point 1,16 Point 16,0 Point 256,0 Point 511,0";
-	var add1 = "Waveform Sine Octave -4 Chorus 508,1,0,-2,128 Point 1,16,16,16,0,32,0,16,0,16,0,32,0 Point 256,0";
-	var add2 = "Waveform Sine Octave -4 Chorus 508,508,2,0,0 Point 1,16,16,32,0,16,0,16,0,32,0,16,0";
-	var fmsaw = "Waveform Sine   Octave -3 Chorus 1,1,0,0,0";
-	var fmsqr = "Waveform Sine   Octave -3 Chorus 1,2,0,0,0";
-	var fmbas = "Waveform Sine   Octave -3 Chorus 128,256,1,0,128";
-	var fmcho = "Waveform Square Octave -3 Chorus 255,128,1,1,128";
+	"Waveform (Str1) Sawtooth Octave -1 Chorus 1024,4";
+	"Waveform (Str2) Sawtooth Octave -2 Chorus 1022,2 Point 0,-127 Point 256,127 Point 511,-127";
+	"Waveform (Str3) Sine Octave -2 Chorus 1023,1,0,96,128 Point 0,0 Point 1,16 Point 16,0 Point 256,0 Point 511,0";
+	"Waveform (Add1) Sine Octave -4 Chorus 508,1,0,-2,128 Point 1,16,16,16,0,32,0,16,0,16,0,32,0 Point 256,0";
+	"Waveform (Add2) Sine Octave -4 Chorus 508,508,2,0,0 Point 1,16,16,32,0,16,0,16,0,32,0,16,0";
+	"Waveform (FmSaw) Sine   Octave -3 Chorus 512,512,0,0,0";
+	"Waveform (FmSqr) Sine   Octave -3 Chorus 512,1024,0,0,0";
+	"Waveform (FmBas) Sine   Octave -3 Chorus 512,1024,4,0,128";
+	"Waveform (FmCho) Square Octave -3 Chorus 510,256,2,1,128";
 */
 library wavegen {
 	const TRIANGLE_WINDOW = $pack( interpolate( $buffer( 4 0 256 0 0 ), $buffer( 512 ), 0, 512, >>( FP_ONE 8 ) ) );
